# GEditor-cpp

./: CMakeLists.txt  README.md  config.local.example  processhandler.h
include/: mainwindow.h  processhandler.h
resources/: geditor.rc  logg.qrc
src/: ProcessHandler.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  processhandler.cpp
